--- a/app/views/pages/artist_search.html.erb
+++ b/app/views/pages/artist_search.html.erb
@@ -1,7 +1,7 @@
  <%= simple_form_for :search, url: artist_search_pages_path, method: :get do |f| %>
         <div class="search-form-control form-group">
           <div class="search-form-inline">
-            <label>Invite your mates</label>
+            <label>Search Labels Artists</label>
 
             <input class="form-control search-input" type="text" name="query" id="query" placeholder="Bob" />
             <button name="button" type="submit" class="btn btn-flat">
@@ -10,3 +10,21 @@
           </div>
         </div>
       <% end %>
+
+
+  <% if @search %>
+    <% @search.results.each do |result| %>
+      <% artists = [] %>
+      <% label = @discogs.get_label(result.id) %>
+      <h1><%= label.name %></h1>
+      <% label_releases = @discogs.raw(label.releases_url) %>
+      <% label_releases.releases.each {|a| artists << a.artist} %>
+      <ol>
+        <% artists.uniq.each do |artist| %>
+          <li><%= artist %></li>
+        <% end %>
+      </ol>
+    <% end %>
+
+  <% end %>
+
