--- a/app/views/pages/label_search.html.erb
+++ b/app/views/pages/label_search.html.erb
@@ -1,33 +1,36 @@
  <div class="container">
-  <%= simple_form_for :search, url: label_search_pages_path, method: :get do |f| %>
-    <div class="search-form-control form-group">
-      <div class="search-form-inline">
-        <label>Search Artists Labels</label>
-        <input class="form-control search-input" type="text" name="query" id="query" placeholder="Jeru Tha Damaja" />
-        <button name="button" type="submit" class="btn btn-flat">
-          <i class="fas fa-search"></i>
-        </button>
+  <h1 class="search-heading">SEARCH LABELS BY ARTIST</h1>
+  <div class="card">
+    <%= simple_form_for :search, url: label_search_pages_path, method: :get do |f| %>
+      <div class="search-form-control form-group">
+        <div class="search-form-inline">
+          <!-- <label>Search Artists Labels</label> -->
+          <input class="form-control search-input" type="text" name="query" id="query" placeholder="eg. Jeru Tha Damaja" />
+          <button name="button" type="submit" class="btn btn-flat">
+            <i class="fas fa-search"></i>
+          </button>
+        </div>
       </div>
-    </div>
-  <% end %>
-
-  <% if @search %>
-    <% @search.results.each do |result| %>
-      <% labels = [] %>
-      <% artist = @discogs.get_artist(result.id) %>
-      <h1><%= artist.name %></h1>
-      <% artist_releases = @discogs.get_artist_releases(result.id) %>
-      <% artist_releases.releases.each do |r| %>
-        <% labels << r.label %>
-        <%# release = @discogs.get_release(r.main_release) %>
-        <%# release.labels.each {|label| labels << label.name} %>
-      <% end %>
-      <ol>
-        <% labels.uniq.each do |label| %>
-        <% next if label == nil %>
-          <li><%= label %></li>
-        <% end %>
-      </ol>
     <% end %>
-  <% end %>
+
+    <% if @search %>
+      <% @search.results.each do |result| %>
+        <% labels = [] %>
+        <% artist = @discogs.get_artist(result.id) %>
+        <h1><%= artist.name %></h1>
+        <% artist_releases = @discogs.get_artist_releases(result.id) %>
+        <% artist_releases.releases.each do |r| %>
+          <% labels << r.label if r.label != nil %>
+          <%# release = @discogs.get_release(r.main_release) %>
+          <%# release.labels.each {|label| labels << label.name} %>
+        <% end %>
+        <ol>
+          <% labels.uniq.sort.each do |label| %>
+          <%# next if label == nil %>
+            <li><%= label %></li>
+          <% end %>
+        </ol>
+      <% end %>
+    <% end %>
+  </div>
  </div>
