--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   background: pink;
   border-bottom: solid 1.5px lightpink;
+  box-shadow: 0px 5px 6px #969595;
   margin-bottom: 40px;
   h1 {
     font-family: 'Kanit', sans-serif;
