--- a/app/views/pages/artist_search.html.erb
+++ b/app/views/pages/artist_search.html.erb
@@ -1,9 +1,10 @@
 <div class="container">
+  <h1 class="search-heading">SEARCH ARTISTS BY LABEL</h1>
   <div class="card">
     <%= simple_form_for :search, url: artist_search_pages_path, method: :get do |f| %>
       <div class="search-form-control form-group">
         <div class="search-form-inline">
-          <label>Search Labels Artists</label>
+          <!-- <label>Search Labels Artists</label> -->
           <input class="form-control search-input" type="text" name="query" id="query" placeholder="eg. Loud Records" />
           <button name="button" type="submit" class="btn btn-flat">
             <i class="fas fa-search"></i>
