--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,8 @@
  <% if @discogs.authenticated? %>
-  <ul>
-    <li><a href="/pages/artist_search">Search Artist by Label</a></li>
-    <li><a href="/pages/label_search">Search Label by Artist</a></li>
-  </ul>
+
+    <h2><a href="/pages/artist_search">Search Artist by Label</a></h2>
+    <h2><a href="/pages/label_search">Search Label by Artist</a></h2>
+
 <% else %>
   <p> Authenticate Discogs.com account</p>
 <% end %>
