--- a/app/assets/stylesheets/components/_headings.scss
+++ b/app/assets/stylesheets/components/_headings.scss
@@ -1,7 +1,26 @@
 .search-heading {
   text-align: center;
-  margin-top: -20px;
+  // margin-top: -20px;
   margin-bottom: -20px;
   font-family: 'Kanit', sans-serif;
   font-weight: 200;
+  font-style: italic;
+}
+
+.home-heading {
+  text-align: center;
+  // margin-top: -20px;
+  font-family: 'Kanit', sans-serif;
+  font-weight: 200;
+  font-style: italic;
+  color: black;
+  text-transform: uppercase;
+  a {
+    color: black;
+    text-decoration: none;
+    &:hover {
+      text-decoration: none;
+      opacity: 0.9;
+    }
+  }
 }
