--- a/app/assets/stylesheets/components/_headings.scss
+++ b/app/assets/stylesheets/components/_headings.scss
@@ -20,7 +20,12 @@
     text-decoration: none;
     &:hover {
       text-decoration: none;
-      opacity: 0.9;
+      opacity: 0.6;
     }
   }
+}
+
+.results-heading {
+  font-family: 'Kanit', sans-serif;
+  font-weight: 200;
 }
