--- a/app/views/pages/artist_search.html.erb
+++ b/app/views/pages/artist_search.html.erb
@@ -6,8 +6,8 @@
         <div class="search-form-inline">
           <!-- <label>Search Labels Artists</label> -->
           <input class="form-control search-input" type="text" name="query" id="query" placeholder="eg. Loud Records" />
-          <button name="button" type="submit" class="btn btn-flat">
-            <i class="fas fa-search"></i>
+          <button name="button" type="submit" class="search-btn">
+            Search  <i class="fas fa-search"></i>
           </button>
         </div>
       </div>
