search bar styling

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -39,6 +39,8 @@
     border: unset;
     font-size: 16px;
     outline: none;
+    margin-left: 16px;
+    min-width: 7.5rem;
   // a {
   //   text-align: center;
   //   background-color: #32363a !important;
