--- a/app/assets/stylesheets/components/_search-forms.scss
+++ b/app/assets/stylesheets/components/_search-forms.scss
@@ -2,6 +2,7 @@
   display: flex;
   // justify-content: space-between;
   input {
+    // border-color: #32363a;
     font-family: 'Kanit', sans-serif;
     font-weight: 100;
     outline: none;
@@ -13,6 +14,6 @@
   // border: 1px solid $yellow;
   border-color: pink;
   outline: none !important;
-  box-shadow: 0 2px 3px rgba(255,192,203,0.5);
+  box-shadow: 0 2px 3px rgba(160, 160, 160, 0.35);
 }
 
