--- a/app/views/pages/artist_search.html.erb
+++ b/app/views/pages/artist_search.html.erb
@@ -28,7 +28,9 @@
       <% end %>
     <% end %>
   </div>
-
+  <div class="change-search-btn">
+    <h1 class="home-heading"><a href="/pages/label_search">Search Labels by Artist</a></h1>
+  </div>
 </div>
 
 
