--- a/app/views/pages/label_search.html.erb
+++ b/app/views/pages/label_search.html.erb
@@ -33,4 +33,7 @@
       <% end %>
     <% end %>
   </div>
+  <div class="change-search-btn">
+      <h1 class="home-heading"><a href="/pages/artist_search">Search Artists by Label</a></h1>
+    </div>
  </div>
