--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -13,7 +13,11 @@
   max-width: 400px;
   margin: 0 auto;
   margin-top: 40px;
+  margin-bottom: 60px;
   box-shadow: 5px 5px #adb5bd, 10px 10px grey, 15px 15px #32363a;
+  left: -7.5px;
+}
+
 
   // &:after {
   //   content: '';
@@ -38,4 +42,3 @@
   //   top: 10px;
   //   left: 10px;
   // }
-}
