--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,11 +1,8 @@
-// .navbar {
-//   margin-
-// }
 .navbar-lewagon {
   justify-content: space-between;
   background: pink;
   border-bottom: solid 1.5px lightpink;
-  box-shadow: 0px 5px 6px #969595;
+  box-shadow: 0px 5px 6px rgba(150, 150, 149, 0.75);
   margin-bottom: 20px;
   h1 {
     font-family: 'Kanit', sans-serif;
@@ -22,6 +19,37 @@
   flex-grow: 0;
 }
 
+.navbar-brand {
+  margin: 0;
+}
 .navbar-lewagon .navbar-brand img {
   width: 100px;
 }
+
+
+@media(max-width: 992px) {
+  .container {
+    max-width: 100% !important;
+  }
+}
+
+// @media(max-width: 575px) {
+//   .navbar-heading span {
+//     display: none;
+//   }
+// }
+
+@media(max-width: 575px) {
+  .navbar-lewagon h1 {
+    font-size: 2em;
+  }
+}
+
+@media(max-width: 415px) {
+  .navbar-lewagon h1 {
+    font-size: 20px;
+  }
+}
+
+
+
