--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,11 @@
 <% if @discogs.authenticated? %>
+    <div class="search-type-btn">
+      <h1 class="home-heading"><a href="/pages/artist_search">Search Artists by Label</a></h1>
+    </div>
 
-    <h1 class="home-heading"><a href="/pages/artist_search">Search Artists by Label</a></h1>
-    <h1 class="home-heading"><a href="/pages/label_search">Search Labels by Artist</a></h1>
-
+    <div class="search-type-btn">
+      <h1 class="home-heading"><a href="/pages/label_search">Search Labels by Artist</a></h1>
+    </div>
 <% else %>
   <p> Authenticate Discogs.com account</p>
 <% end %>
