--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,23 +4,26 @@
       <%= image_tag("labelmates.png") %>
     <% end %>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
 
 
-    <h1 class="navbar-heading">LABEL MATES</h1>
+    <h1 class="navbar-heading">L<span>ABEL </span>M<span>ATES</span></h1>
 
 
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
+    <div class="home-btn">
+      <%= link_to "Home", root_path %>
+    </div>
+   <!--  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto"> -->
         <%# if user_signed_in? %>
           <!-- <li class="nav-item active"> -->
-            <div class="home-btn">
-              <%= link_to "Home", root_path %>
+           <!--  <div class="home-btn">
+              <%#= link_to "Home", root_path %>
             </div>
-
+ -->
           <!-- </li> -->
           <!-- <li class="nav-item">
             <%#= link_to "Messages", "#", class: "nav-link" %>
@@ -38,8 +41,9 @@
             <%#= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
         <%# end %> -->
-      </ul>
-    </div>
+     <!--  </ul>
+    </div> -->
   </div>
-
 </div>
+
+
