testing list styling

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -19,20 +19,20 @@
 }
 
 .card ol {
-  list-style: none;
+  list-style: square;
 }
 
-.card li:before {
-   content: '';
-   display: inline-block;
-   height: 12px;
-   width: 12px;
-   background-image: url('pink-record.png');
-   background-size: contain;
-   background-repeat: no-repeat;
-   margin-right: 10px;
-   opacity: 0.7;
-}
+// .card li:before {
+//    content: '';
+//    display: inline-block;
+//    height: 12px;
+//    width: 12px;
+//    background-image: url('pink-record.png');
+//    background-size: contain;
+//    background-repeat: no-repeat;
+//    margin-right: 10px;
+//    opacity: 0.7;
+// }
 
 
   // &:after {
