--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 
 body::after {
   content: "";
-  background: url("mixing-board.jpg");
+  background: image-url("mixing-board.jpg");
   opacity: 0.1;
   top: 0;
   left: 0;
