responsive home page buttons

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -139,4 +139,22 @@
 }
 
 
+@media(max-width: 575px) {
+  .search-type-btn a {
+    font-size: 2rem;
+  }
+}
+
+@media(max-width: 480px) {
+  .search-type-btn a {
+    font-size: 1.5rem;
+  }
+}
+
+@media(max-width: 360px) {
+  .search-type-btn a {
+    font-size: 1.3rem;
+  }
+}
+
 
