footer script test

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -40,3 +40,13 @@ footer {
 footer, .page-content::after {
   height: 80px;
 }
+
+.footer-script {
+  color: white;
+  font-family: 'Kanit', sans-serif;
+  font-weight: 100;
+  font-style: italic;
+  font-size: 16px;
+  margin: 0;
+  text-transform: uppercase;
+}
