changed footer script

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer>
   <div class="links">
+    <p class="footer-script">Built for you by Cam Melville</p>
     <%= link_to "https://github.com/cam-ron-90", target: :_blank do %>
       <i class="fab fa-github-square"></i>
     <% end %>
-    <p class="footer-script">Built for you by Sir Ron the King of Riddles</p>
     <%= link_to "https://www.linkedin.com/in/cam-melville-b130b61a5/", target: :_blank do %>
       <i class="fab fa-linkedin"></i>
     <% end %>
